# MLVU-project

./: .gitignore  README.md  ablation_exp.ipynb  attention_processor.py  attention_vis.ipynb  attn_map_utils.py  comparison_exp.ipynb  download_hisam_ckpts.sh  hisam_inpaint.ipynb  main.py  pyproject.toml  remove.sh  replace.sh  run_hisam_demo.py  stable_diffusion_inpaint.py
LLM-grounded/: generate.py
LLM-grounded/generation/: sdxl_refinement.py
LLM-grounded/models/: sam.py
LLM-grounded/utils/: api_key.py  attn.py  boxdiff.py  cache.py  guidance.py  latents.py  llm.py  parse.py  schedule.py  utils.py  vis.py
eval/: ocr.py
eval/clipscore/: clip.sh  clipscore.py
eval/fid/src/pytorch_fid/: fid_score.py
eval/fid/src/pytorch_fid.egg-info/: requires.txt
glyph_control/: convert.ipynb  convert_cldm_to_diffusers.py  demo.ipynb
glyph_dataset/: generate.py  preprocess.py  split.py
hi_sam/: README.md  box_mask.py  readme.md  run_amg.py  run_hisam.py  text_segmentation.py
hi_sam/hi_sam/models/: build.py  image_encoder.py  mask_decoder.py
hi_sam/models/: auto_mask_generator.py  build.py  common.py  modal_aligner.py  transformer.py
hi_sam/models/data/: dataloader.py
hi_sam/models/efficient_sam/: efficient_sam_encoder.py
hi_sam/models/evaluation/: evaluator.py
hi_sam/utils/: misc.py  utilities.py
hi_sam_test/: run_hisam_demo.py  zip_demo.sh
inpaint_with_segmentation/: demo.sh  img_edit.ipynb  inpaint.py  참고자료.txt
random/: README.md  main.py  tools.py
random/hi_sam/: run_hisam.py
random/hi_sam/models/: loss.py  prompt_encoder.py
random/pretrained_checkpoint/: read.txt
random_text_img/: README.md  radom_text_gen.py  random_text_gen.ipynb  tools.py
random_text_img/hi_sam/models/: efficient_hi_sam.py  hi_sam.py  predictor.py
random_text_img/hi_sam/models/data/: transforms.py
random_text_img/hi_sam/models/efficient_sam/: efficient_sam_decoder.py  two_way_transformer.py
random_text_img/hi_sam/utils/: patchify.py
random_text_img/hi_sam_test/: hisam.py
sld2/: SLD_demo.py  infer.sh  requirements.txt
sld2/sld/: utils.py
style_transfer/: README.md  demo.ipynb  test.ipynb  utils.py  vsp_control-depth_script.py  vsp_control-edge_script.py  vsp_real_script.py  vsp_script.py
style_transfer/pipelines/: controlnet.py  inverted_ve_pipeline.py  pipeline_controlnet_sd_xl.py  pipeline_stable_diffusion_xl.py
style_transfer/visualize_attention_src/: ip_adapter_attn_map_utils.py  pipeline_stable_diffusion_xl_attn.py  save_attn_map_script.py  utils.py  visualize_attn_map_script.py
text_diffuser/: a.py  any_text.py  demo.py  eval.sh  evals.py  evaluate.py  generate_mask_only.py  inference.py  mask_only_tools.py  pipeline_demo.ipynb  pipeline_text_diffuser_sd15.py  pipeline_text_diffuser_sd15_img2img.py  prompt.txt  to.py  train.py  util.py
text_diffuser/.ipynb_checkpoints/: pipeline_demo-checkpoint.ipynb
text_diffuser/clipscore/: clipscore.py
text_diffuser/diffusers/: modeling_utils.py  scheduling_ddpm.py.py  unet_2d_condition.py
text_diffuser/fid/src/pytorch_fid/: fid_score.py
text_diffuser/fid/src/pytorch_fid.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
text_diffuser/model/: layout_generator.py  layout_transformer.py
text_diffuser/model/text_segmenter/: unet.py  unet_parts.py
text_diffuser/output/: latest
text_diffuser/t_diffusers/: callbacks.py  modeling_utils.py  scheduling_ddpm.py  unet_2d_condition.py
utils/: crop_for_replacing.py
