[tool.poetry]
name = "mlvu-project"
version = "0.1.0"
description = "MLVU Project in SNU 2024 Spring"
authors = ["GoGiants1 <chooi221@snu.ac.kr>"]
readme = "README.md"
package-mode = false


[tool.poetry.dependencies]
python = "^3.11"
diffusers = "^0.27.2"
accelerate = "^0.28.0"
transformers = "^4.39.3"
einops = "^0.7.0"
kornia = "^0.7.2"
gradio = "^4.25.0"
torch = [
    {version = "2.3.0", source="torch-cuda118", markers = "sys_platform == 'linux'"},
    {version = "2.3.0", source="pypi"}
]
torchaudio = [
    { version = "2.3.0", source="torch-cuda118", markers = "sys_platform == 'linux'"},
    {version = "2.3.0", source="pypi"}
]
torchvision = [
    {version = "0.18.0", source="torch-cuda118", markers = "sys_platform == 'linux'"},
    {version = "0.18.0", source="pypi"}    
]

[tool.poetry.group.dev.dependencies]
ruff = "^0.3.5"

[[tool.poetry.source]]
name = "pypi"
priority = "primary"

[[tool.poetry.source]]
name = "torch-cuda118"
url = "https://download.pytorch.org/whl/cu118"
priority = "explicit"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.ruff]
# Never enforce `E501` (line length violations).
ignore = ["C901", "E501", "E741", "F402", "F823"]
select = ["C", "E", "F", "I", "W"]
line-length = 119

# Ignore import violations in all `__init__.py` files.
[tool.ruff.per-file-ignores]
"__init__.py" = ["E402", "F401", "F403", "F811"]
"src/diffusers/utils/dummy_*.py" = ["F401"]

[tool.ruff.isort]
lines-after-imports = 2
known-first-party = ["diffusers"]

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"