[tool.poetry]
name = "mlvu-project"
version = "0.1.0"
description = "MLVU Project in SNU 2024 Spring"
authors = ["GoGiants1 <chooi221@snu.ac.kr>"]
readme = "README.md"
package-mode = false


[tool.poetry.dependencies]
python = "^3.11"
diffusers = "^0.27.2"
accelerate = "^0.28.0"
transformers = "^4.39.3"
einops = "^0.7.0"
kornia = "^0.7.2"
gradio = "^4.25.0"
torch = [
    {version = "2.3.0", source="torch-cuda118", markers = "sys_platform == 'linux'"},
    {version = "2.3.0", source="pypi", markers = "sys_platform != 'linux'"}
]
torchaudio = [
    { version = "2.3.0", source="torch-cuda118", markers = "sys_platform == 'linux'"},
    {version = "2.3.0", source="pypi", markers = "sys_platform != 'linux'"}
]
torchvision = [
    {version = "0.18.0", source="torch-cuda118", markers = "sys_platform == 'linux'"},
    {version = "0.18.0", source="pypi", markers = "sys_platform != 'linux'"}    
]
opencv-python = "^4.9.0.80"
pycocotools = "^2.0.7"
absl-py = "^2.1.0"
matplotlib = "^3.8.4"
polygon3 = "^3.0.9.1"
pyclipper = "^1.3.0.post5"
python-levenshtein = "^0.25.1"
scikit-image = "^0.23.2"
scipy = "^1.13.0"
shapely = "^2.0.4"
timm = "^0.9.16"
tqdm = "^4.66.2"
termcolor = "^2.4.0"
datasets = "^2.19.0"
triton = {version = "^2.0.0.post1", markers = "sys_platform == 'linux'"}


[tool.poetry.group.dev.dependencies]
ruff = "^0.3.5"

[[tool.poetry.source]]
name = "pypi"
priority = "primary"

[[tool.poetry.source]]
name = "torch-cuda118"
url = "https://download.pytorch.org/whl/cu118"
priority = "explicit"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.ruff]
# Never enforce `E501` (line length violations).
ignore = ["C901", "E501", "E741", "F402", "F823"]
select = ["C", "E", "F", "I", "W"]
line-length = 119

# Ignore import violations in all `__init__.py` files.
[tool.ruff.per-file-ignores]
"__init__.py" = ["E402", "F401", "F403", "F811"]
"src/diffusers/utils/dummy_*.py" = ["F401"]

[tool.ruff.isort]
lines-after-imports = 2
known-first-party = ["diffusers"]

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"